--- a/formuladb-env/frmdb-apps/Beauty_Salon/index.html
+++ b/formuladb-env/frmdb-apps/Beauty_Salon/index.html
@@ -7,7 +7,7 @@
     <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover frmdb-transform-preserve-3d" style="">
+    <header class="frmdb-t-cover frmdb-transform-preserve-3d">
         <div class="frmdb-t-cover__main min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Beauty_Salon/52e0d1404a5baa14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
             <div class="jumbotron col-12 col-lg-8 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -41,7 +41,7 @@
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center" style="">
+                <div class="frmdb-t-card-action mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
                 </div>
                 <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
@@ -57,7 +57,7 @@
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Integer sit amet nisi</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center" style="">
+                <div class="frmdb-t-card-action mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now
 </a>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Curabitur suscipit, massa&nbsp;</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center" style="">
+                <div class="frmdb-t-card-action mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
                 </div>
                 <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
@@ -88,7 +88,7 @@
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <div class="frmdb-t-card-action mt-n4 text-center" style="">
+                <div class="frmdb-t-card-action mt-n4 text-center">
                     <a href="javascript:void(0)" class="btn btn-primary btn-lg" data-i18n="en">Book now</a>
                 </div>
                 <div class="frmdb-t-card-note text-center border border-2 border-primary p-1 bg-dark text-light mt-n3" style="grid-area: 1 / 1 / 1 / 1; place-self: start center;">
@@ -133,19 +133,19 @@
             <div class="card-deck frmdb-cards-wrap-3 frmdb-card-h-50">
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
-                        <i class="fa fa-mobile-alt text-primary m-2" style="font-size: 50px;"></i>&nbsp;Call us 07XX XXX XXX
+                        <frmdb-icon name="fontawesome-solid-mobile-alt-apple-call-cell_phone-cellphone-device-iphone-number-screen-telephone" class="text-primary m-2"></frmdb-icon>&nbsp;Call us 07XX XXX XXX
                     </h4>
                     <p data-i18n="en"></p>
                 </div>
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en" contenteditable="true" spellcheckker="false">
-                        <i class="fa fa-map-marker-alt text-primary m-2" style="font-size: 50px;"></i>&nbsp; &nbsp; Visit us
+                        <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-primary m-2"></frmdb-icon>&nbsp; &nbsp; Visit us
                     </h4>
                     <p data-i18n="en">Maecenas tempor erat eget ornare vulputate.&nbsp;</p>
                 </div>
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
-                        <i class="fa fa-clock text-primary m-2" style="font-size: 50px;"></i>&nbsp;We're here 9AM - 9PM
+                        <frmdb-icon name="fontawesome-solid-clock-date-late-schedule-time-timer-timestamp-watch" class="text-primary m-2"></frmdb-icon>&nbsp;We're here 9AM - 9PM
                     </h4>
                 </div>
             </div>
@@ -153,12 +153,6 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
