--- a/formuladb-env/frmdb-apps/Design_Therapy/index.html
+++ b/formuladb-env/frmdb-apps/Design_Therapy/index.html
@@ -7,8 +7,8 @@
     <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover frmdb-transform-preserve-3d" style="">
-        <div class="frmdb-t-main min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/apps/Design_Therapy/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
+    <header class="frmdb-t-cover frmdb-transform-preserve-3d">
+        <div class="frmdb-t-main min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Design_Therapy/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
             <div class="jumbotron animated slideInUp col-12 col-lg-8 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">design therapy</h1>
@@ -23,7 +23,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/54e1d0464955aa14f6da8c7dda79367f1c37dfe752506c4870277bdd974dcd5cbd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/54e1d0464955aa14f6da8c7dda79367f1c37dfe752506c4870277bdd974dcd5cbd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron animated slideInUp min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
@@ -38,7 +38,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/55e1d1464956ad14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc759bd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/55e1d1464956ad14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc759bd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron animated slideInUp min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
@@ -53,7 +53,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/57e1d2424e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc75cb8_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/57e1d2424e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc75cb8_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron animated slideInUp min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
@@ -68,7 +68,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/52e2d0434a5aa914f6da8c7dda79367f1c37dfe752506c4870277bdd974cc659bd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/52e2d0434a5aa914f6da8c7dda79367f1c37dfe752506c4870277bdd974cc659bd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron animated slideInUp min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
@@ -83,7 +83,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/57e0dd424d52a414f6da8c7dda79367f1c37dfe752506c4870277bdd974cc158b1_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/57e0dd424d52a414f6da8c7dda79367f1c37dfe752506c4870277bdd974cc158b1_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron animated slideInUp min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
@@ -95,7 +95,7 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/apps/Design_Therapy/54e1dd424354a414f6da8c7dda79367f1c37dfe752506c4870277bdd974fc751b0_1280.jpg&quot;);">
+    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Design_Therapy/54e1dd424354a414f6da8c7dda79367f1c37dfe752506c4870277bdd974fc751b0_1280.jpg&quot;);">
         <div class="section_title text-center">
             <h2 data-i18n="en">how it works</h2>
             <p data-i18n="en">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="card-deck frmdb-cards-wrap-3 frmdb-card-h-50">
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
-                    <i class="fa fa-id-card text-primary m-2" style="font-size: 50px;"></i>
+                    <frmdb-icon name="fontawesome-solid-id-card-alt-contact-demographics-document-identification-issued-profile" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> short survey
                     </h4>
                     <p data-i18n="en">This is the step where we found out more about you, your design needs, we discuss about your style and what are your expectations.
@@ -112,13 +112,13 @@
                     <p></p>
                 </div>
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
-                    <i class="fa fa-handshake text-primary m-2" style="font-size: 50px;"></i>
+                    <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en">&nbsp;designer match</h4>
                     <p data-i18n="en">This is the second step where you will meet the perfect designer for you. He will present mood boards concept.</p>
                     <p></p>
                 </div>
                 <div class="card frmdb-t-card-icon border border-2 border-primary p-3 frmdb-bg-dark-70">
-                    <i class="fa fa-couch text-primary m-2" style="font-size: 50px;"></i>
+                    <frmdb-icon name="fontawesome-solid-couch-chair-cushion-furniture-relax-sofa" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> shop &amp; order
                     </h4>
                     <p data-i18n="en"></p>
@@ -127,7 +127,7 @@
                     <p></p>
                 </div>
                 <div class="card frmdb-t-card-icon center border border-2 border-primary p-3 frmdb-bg-dark-70">
-                    <i class="fa fa-home text-primary m-2" style="font-size: 50px; color: rgb(128, 128, 192); line-height: 50px;"></i>
+                    <frmdb-icon name="fontawesome-solid-home-abode-building-house-main" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> enjoy your rooms</h4>
                     <p data-i18n="en">This is the last step where you will enjoy your rooms you've always wanted.</p>
                 </div>
@@ -138,7 +138,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/54e1dd424354ac14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc550bd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/54e1dd424354ac14f6da8c7dda79367f1c37dfe752506c4870277bdd974cc550bd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around animated slideInUp" data-aos="slideInUp">
@@ -153,7 +153,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/54e5d34a4950a914f6da8c7dda79367f1c37dfe752506c4870277bdd974cc758b8_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/54e5d34a4950a914f6da8c7dda79367f1c37dfe752506c4870277bdd974cc758b8_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around animated slideInUp" data-aos="slideInUp">
@@ -167,7 +167,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/57e1d14a4e53a814f6da8c7dda79367f1c37dfe752506c4870277bdd974fc05bbf_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/57e1d14a4e53a814f6da8c7dda79367f1c37dfe752506c4870277bdd974fc05bbf_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around animated slideInUp" data-aos="slideInUp">
@@ -181,7 +181,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/57e8d1434f50aa14f6da8c7dda79367f1c37dfe752506c4870277bdd974dcd5cbd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/57e8d1434f50aa14f6da8c7dda79367f1c37dfe752506c4870277bdd974dcd5cbd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around animated slideInUp" data-aos="slideInUp">
@@ -196,7 +196,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Design_Therapy/55e3d5454f52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd974ccc5cb9_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Design_Therapy/55e3d5454f52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd974ccc5cb9_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around animated slideInUp" data-aos="slideInUp">
