--- a/formuladb-env/frmdb-apps/Photography_portofolio_services/index.html
+++ b/formuladb-env/frmdb-apps/Photography_portofolio_services/index.html
@@ -6,7 +6,7 @@
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
     <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Photography_portofolio_services/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
         <div class="frmdb-t-cover__main flex-grow-1 d-flex flex-column justify-content-center 
-" style="">
+">
             <div class="text-center
 ">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -30,20 +30,20 @@
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/static/frmdb-apps/Photography_portofolio_services/50e9d542485ab108f5d08460962936771d3edce4524c704c7d2f7ad19249c55e_640.jpg" alt="">
                 </div>
-                <div class="card-body text-center" style="">
+                <div class="card-body text-center">
                     <h5 data-i18n="en">&nbsp;Food photography</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action mb-2" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;"></div>
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more</a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold" style=""></div>
+                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="position: relative; left: 0px; display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/static/frmdb-apps/Photography_portofolio_services/54e3d3454e51a414f6da8c7dda79367f1c37dfe752506c4870277bd59248c059b9_640.jpg" alt="">
                 </div>
-                <div class="card-body text-center" style="">
+                <div class="card-body text-center">
                     <h5 data-i18n="en">editorial
                         <div data-i18n="en"></div>
                     </h5>
@@ -54,13 +54,13 @@
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more
                     <br>
                 </a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold" style=""></div>
+                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/static/frmdb-apps/Photography_portofolio_services/50e7d2434b4fad0bffd8992cc6293e76143ddfe44e507441752e7ed1914acc_640.jpg" alt="">
                 </div>
-                <div class="card-body text-center" style="">
+                <div class="card-body text-center">
                     <h5 data-i18n="en">Sports photography</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -69,13 +69,13 @@
                 <a href="javascript:void(0)" class="btn btn-primary m-auto" data-i18n="en">See more
                     <br>
                 </a>
-                <div class="frmdb-t-card-note text-center text-info font-weight-bold" style=""></div>
+                <div class="frmdb-t-card-note text-center text-info font-weight-bold"></div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/static/frmdb-apps/Photography_portofolio_services/51e2d0474950b108f5d08460962936771d3edce4524c704c7d2f7ad1924bc759_640.jpg" alt="">
                 </div>
-                <div class="card-body text-center" style="">
+                <div class="card-body text-center">
                     <h5 data-i18n="en">Events photography</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
