--- a/formuladb-env/frmdb-apps/Health_Guardians/index.html
+++ b/formuladb-env/frmdb-apps/Health_Guardians/index.html
@@ -7,8 +7,8 @@
     <div class="frmdb-t-main-nav">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/static/apps/themes/bg1.jpg')">
-        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/apps/themes/bg2.jpg')">
+    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg1.jpg')">
+        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg2.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">health guardians</h1>
@@ -28,11 +28,11 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img" style="">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Health_Guardians/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Health_Guardians/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">dr. lee peng</h5>
                     <h6 data-i18n="en">general practitioner</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
@@ -46,11 +46,11 @@
                     </a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-img" style="">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Health_Guardians/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Health_Guardians/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">dr. john perk</h5>
                     <h6 data-i18n="en">CARDIOLOGY SPECIALIST</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
@@ -62,11 +62,11 @@
                     <div>CONTACT US&nbsp;</div>
                 </a>
             </div>
-            <div class="card frmdb-t-card-img" style="">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Health_Guardians/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg" alt="">
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Health_Guardians/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">dr. Jose lopez</h5>
                     <h6 data-i18n="en">HEMATOLOGIST</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -77,11 +77,11 @@
                 </a>
                 <div class="frmdb-t-card-action"></div>
             </div>
-            <div class="card frmdb-t-card-img" style="">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Health_Guardians/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png" alt="">
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Health_Guardians/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">dr. meghan raw</h5>
                     <h6 data-i18n="en">Diabetologist/ nutritionist</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
@@ -99,7 +99,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Health_Guardians/57e7d14a4f55ab14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Health_Guardians/57e7d14a4f55ab14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -122,14 +122,14 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Health_Guardians/53e6d647485ab108f5d08460962936771d3edce4524c704c7d2f72d69145c65d_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Health_Guardians/53e6d647485ab108f5d08460962936771d3edce4524c704c7d2f72d69145c65d_640.jpg" alt="...">
             </div>
         </div>
     </section>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Health_Guardians/53e6d6474855b108f5d08460962936771d3edce4524c704c7d2f72d69145c65d_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Health_Guardians/53e6d6474855b108f5d08460962936771d3edce4524c704c7d2f72d69145c65d_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
