--- a/formuladb-env/frmdb-apps/Playground/index.html
+++ b/formuladb-env/frmdb-apps/Playground/index.html
@@ -7,7 +7,7 @@
     <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="">
+    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50">
         <div class="frmdb-t-main frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Playground/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
             <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
                 <h6 data-i18n="en">all ages wellcome</h6>
@@ -39,10 +39,10 @@
         </div>
         <div class="card-deck">
             <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden" style="">
+                <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/static/frmdb-apps/Playground/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">cozy playground</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
@@ -50,17 +50,17 @@
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="">Action</a>
                 </div>
-                <div class="frmdb-t-card-note" style="">
+                <div class="frmdb-t-card-note">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden" style="">
+                <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/static/frmdb-apps/Playground/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">cool games</h5>
                     <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
@@ -68,17 +68,17 @@
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="">Action</a>
                 </div>
-                <div class="frmdb-t-card-note" style="">
+                <div class="frmdb-t-card-note">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden" style="">
+                <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/static/frmdb-apps/Playground/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">laser tag</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -86,17 +86,17 @@
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="">Action</a>
                 </div>
-                <div class="frmdb-t-card-note" style="">
+                <div class="frmdb-t-card-note">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <div class="frmdb-t-img overflow-hidden" style="">
+                <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/static/frmdb-apps/Playground/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg" alt="" width="250">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">escalade</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
@@ -104,7 +104,7 @@
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="">Action</a>
                 </div>
-                <div class="frmdb-t-card-note" style="">
+                <div class="frmdb-t-card-note">
                     <span>INFO 
                         <small>info</small>
                     </span>
@@ -154,39 +154,39 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-expand text-primary" style=""></i>&nbsp;600 square meters
+                        <frmdb-icon name="fontawesome-solid-expand-arrow-bigger-enlarge-resize"></frmdb-icon>&nbsp;600 square meters
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-handshake text-primary" style=""></i>&nbsp;exclusiveness
+                        <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership"></frmdb-icon>&nbsp;exclusiveness
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-user-clock text-primary" style=""></i>&nbsp;unlimited laser tag
+                        <frmdb-icon name="fontawesome-solid-user-clock-alert-person-remind-time"></frmdb-icon>&nbsp;unlimited laser tag
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-hamburger text-primary" style=""></i>&nbsp;kids menu
+                        <frmdb-icon name="fontawesome-solid-hamburger-bacon-beef-burger-burger_king-cheeseburger-fast_food-grill-ground_beef-mcdonalds-sandwich"></frmdb-icon>&nbsp;kids menu
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-gamepad text-primary" style=""></i>&nbsp;board games
+                        <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon>&nbsp;board games
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-parking text-primary" style=""></i>&nbsp;parking
+                        <frmdb-icon name="fontawesome-solid-parking-auto-car-garage-meter"></frmdb-icon>&nbsp;parking
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
