--- a/formuladb-env/frmdb-apps/Summer_Villa/index.html
+++ b/formuladb-env/frmdb-apps/Summer_Villa/index.html
@@ -7,8 +7,8 @@
     <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/apps/Summer_Villa/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_1280.jpg&quot;);">
-        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/apps/Summer_Villa/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg&quot;);">
+    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Summer_Villa/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_1280.jpg&quot;);">
+        <div class="frmdb-t-main flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Summer_Villa/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg&quot;);">
             <div class="jumbotron w-100 text-center bg-transparent">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">summer villa</h1>
@@ -28,36 +28,36 @@
         </div>
         <div class="card-deck">
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">relaxing at the pool</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="" data-i18n="en">BOOK A SUNBED</a>
                 </div>
-                <div class="frmdb-t-card-note" style=""></div>
+                <div class="frmdb-t-card-note"></div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">which room do you prefer?</h5>
                     <p data-i18n="en">Integer sit amet nisi viverra, pharetra</p>
                 </div>
                 <div class="frmdb-t-card-action">
                     <a href="javascript:void(0)" class="" data-i18n="en">SEE THE ROOMS</a>
                 </div>
-                <div class="frmdb-t-card-note" style=""></div>
+                <div class="frmdb-t-card-note"></div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">fresh menu daily</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
@@ -66,10 +66,10 @@
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">enjoy the sea view terrace</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
@@ -91,13 +91,13 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Summer_Villa/55e8d5474b56aa14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
-                <img class="img-fluid" src="/formuladb-env/static/apps/Summer_Villa/55e8d5474857ad14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Summer_Villa/55e8d5474b56aa14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Summer_Villa/55e8d5474857ad14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
             </div>
-            <img class="img-fluid" src="/formuladb-env/static/apps/Summer_Villa/55e8d5474b50a514f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
+            <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Summer_Villa/55e8d5474b50a514f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/apps/Summer_Villa/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);">
+    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Summer_Villa/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);">
         <div class="section_title text-center">
             <h2>Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -106,39 +106,39 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-utensils" style=""></i> Food
+                        <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-biking" style=""></i> Sports
+                        <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-car-auto" style=""></i> Auto
+                        <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-tv" style=""></i> TV
+                        <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-glass-martini-alt" style=""></i> Drinks
+                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-water" style=""></i> pool
+                        <frmdb-icon name="fontawesome-solid-water-lake-liquid-ocean-sea-swim-wet"></frmdb-icon> pool
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
@@ -153,10 +153,10 @@
         </div>
         <div class="card-deck">
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">wine tour with lunch</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
@@ -165,10 +165,10 @@
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">flavours day trip in the city&nbsp;</h5>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
@@ -177,10 +177,10 @@
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">botanical gardens tour&nbsp;</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
@@ -189,10 +189,10 @@
                 </div>
             </div>
             <div class="card frmdb-t-card-img border-0" style="display: grid;">
-                <div class="frmdb-t-img overflow-hidden" style="">
-                    <img src="/formuladb-env/static/apps/Summer_Villa/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg" alt="">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/Summer_Villa/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg" alt="">
                 </div>
-                <div class="card-body" style="">
+                <div class="card-body">
                     <h5 data-i18n="en">antique market</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
