cleanup unused scripts

--- a/formuladb-env/frmdb-apps/Hotel_Booking/_scripts.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/_scripts.html
@@ -1,7 +1,7 @@
 <div data-frmdb-fragment="_scripts.html">
     <script src="/formuladb-env/plugins/vendor/js/jquery-3.4.1.min.js"></script>
-    <script src="/formuladb-env/plugins/vendor/js/popper.min.js"></script>
-    <script src="/formuladb-env/plugins/vendor/js/bootstrap.min.js"></script>
+.min.js"></script>
+
     <script>
         function scrollToAnchor(aid) {
             var aTag = $("a[name='" + aid + "']");
