align Hotel_Booking app with themes

--- a/formuladb-env/frmdb-apps/themes/landing-page.html
+++ b/formuladb-env/frmdb-apps/themes/landing-page.html
@@ -39,7 +39,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-img" style="display: grid;">
+            <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/static/frmdb-apps/themes/card1.jpg" alt="" />
                 </div>
