--- a/formuladb-env/frmdb-apps/Hotel_Booking/index.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/index.html
@@ -1,170 +1,216 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
     <title>King Hotel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Comfort -->
+    <!-- <link rel="stylesheet" id="frmdb-look-css" href="_css/lux-ffc208-353b41.css"> -->
+    <!-- Grand Frames -->
+    <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
 </head>
+
 <body data-frmdb-theme="Clean">
-    <div data-frmdb-fragment="_nav.html"></div>
-    <header class="frmdb-t-cover min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Hotel_Booking/banner_bg.jpg&quot;);">
-        <div></div>
-        <div class="jumbotron w-100 text-center bg-transparent">
-            <h6>Away from monotonous life</h6>
-            <h1 class="display-4">Relax And Enjoy</h1>
-            <p>If you are looking for a relaxation and luxury, our hotel has everything you are looking for.
-                <br>And our prices will be a nice surprise.
-            </p>
-            <a href="#" class="btn btn-primary">Get Started</a>
+    <div class="frmdb-t-main-nav">
+        <nav data-frmdb-fragment="_nav.html" src="_nav.html"></nav>
+    </div>
+    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg1.jpg')">
+        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg2.jpg')">
+            <div class="jumbotron">
+                <h6>Subtitle of app, can be a bit longer in words</h6>
+                <h1 class="display-4">Title of website</h1>
+                <p>Lead paragraph providing a short introduction to you website or app,
+                    <br>it would be good to keep it under two lines of text
+                </p>
+                <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
+            </div>
         </div>
-        <div class="frmdb-t-aside container frmdb-section-dark px-0">
-            <div data-frmdb-fragment="_form.html"></div>
+        <div class="frmdb-t-aside">
+            <form data-frmdb-fragment="_form.html" src="_form.html"></form>
         </div>
     </header>
-    <section>
-        <div class="container">
-            <div class="mb-5 text-center">
-                <h2 class="title_color">Hotel Accomodation</h2>
-                <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, </p>
+
+    <section class="container py-5">
+        <div class="text-center mb-5">
+            <h2 id="thememediacards">Cards with Images</h2>
+            <p>Section lead paragraph, some text about the content described in this section.</p>
+        </div>
+        <div class="card-deck">
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/themes/card1.jpg" alt="" />
+                </div>
+                <div class="card-body">
+                    <h5>Card 1 title</h5>
+                    <h6>Card 1 subtitle</h6>
+                    <p>Quisque ornare, quam a blandit malesuada</p>
+                </div>
+                <div class="frmdb-t-card-action">
+                    <a href="javascript:void(0)">Action</a>
+                </div>
+                <div class="frmdb-t-card-note">
+                    <span>INFO <small>info</small></span>
+                </div>
             </div>
-            <div class="card-deck frmdb-cards-wrap-4">
-                <div class="card border-0">
-                    <div class="card border-0">
-                        <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room1.jpg" alt="">
-                        <div class="card-img-overlay d-flex flex-column justify-content-end">
-                            <div class="text-center">
-                                <a href="#" class="btn btn-primary">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer text-center border-0 bg-transparent">
-                        <h4>Double Deluxe Room</h4>
-                        <h4 class="text-info">$250
-                            <small>/night</small>
-                        </h4>
-                    </div>
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/themes/card2.jpg" alt="">
                 </div>
-                <div class="card border-0">
-                    <div class="card border-0">
-                        <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room2.jpg" alt="">
-                        <div class="card-img-overlay d-flex flex-column justify-content-end">
-                            <div class="text-center">
-                                <a href="#" class="btn btn-primary">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer text-center border-0 bg-transparent">
-                        <a href="#">
-                            <h4>Single Deluxe Room</h4>
-                        </a>
-                        <h4 class="text-info">$200
-                            <small>/night</small>
-                        </h4>
-                    </div>
+                <div class="card-body">
+                    <h5>Card 2 title</h5>
+                    <h6>Card 2 subtitle</h6>
+                    <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <div class="card border-0">
-                    <div class="card border-0">
-                        <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room3.jpg" alt="">
-                        <div class="card-img-overlay d-flex flex-column justify-content-end">
-                            <div class="text-center">
-                                <a href="#" class="btn btn-primary">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer text-center border-0 bg-transparent">
-                        <a href="#">
-                            <h4>Honeymoon Suite</h4>
-                        </a>
-                        <h4 class="text-info">$750
-                            <small>/night</small>
-                        </h4>
-                    </div>
+                <div class="frmdb-t-card-action">
+                    <a href="javascript:void(0)">Action</a>
                 </div>
-                <div class="card border-0">
-                    <div class="card border-0">
-                        <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room4.jpg" alt="">
-                        <div class="card-img-overlay d-flex flex-column justify-content-end">
-                            <div class="text-center">
-                                <a href="#" class="btn btn-primary">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer text-center border-0 bg-transparent">
-                        <a href="#">
-                            <h4>Economy Double Room</h4>
-                        </a>
-                        <h4 class="text-info">$200
-                            <small>/night</small>
-                        </h4>
-                    </div>
+                <div class="frmdb-t-card-note">
+                    <span>INFO <small>info</small></span>
+                </div>
+            </div>
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/themes/card3.jpg" alt="">
+                </div>
+                <div class="card-body">
+                    <h5>Card 3 title</h5>
+                    <h6>Card 3 subtitle</h6>
+                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                </div>
+                <div class="frmdb-t-card-action">
+                    <a href="javascript:void(0)">Action</a>
+                </div>
+                <div class="frmdb-t-card-note">
+                    <span>INFO <small>info</small></span>
+                </div>
+            </div>
+            <div class="card frmdb-t-card-img">
+                <div class="frmdb-t-img overflow-hidden">
+                    <img src="/formuladb-env/static/frmdb-apps/themes/card4.jpg" alt="">
+                </div>
+                <div class="card-body">
+                    <h5>Card 4 title</h5>
+                    <h6>Card 4 subtitle</h6>
+                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                </div>
+                <div class="frmdb-t-card-action">
+                    <a href="javascript:void(0)">Action</a>
+                </div>
+                <div class="frmdb-t-card-note">
+                    <span>INFO <small>info</small></span>
                 </div>
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/Hotel_Booking/facilites_bg.jpg')">
-        <div class="container">
-            <div class="section_title text-center">
-                <h2 class="title_w">Royal Facilities</h2>
-                <p>Who are in extremely love with eco friendly system.</p>
-            </div>
-            <div class="card-deck frmdb-cards-wrap-3">
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Restaurant
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports CLub
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-swimmer-athlete-head-man-olympics-person-pool-water"></frmdb-icon> Swimming Pool
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Rent a Car
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-dumbbell-exercise-gym-strength-weight-weight-lifting"></frmdb-icon> Gym
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-                <div class="card border-light p-4 bg-transparent">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Bar
-                    </h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="my-5 py-5">
+
+
+    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg-right.jpg')">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 d_flex align-items-center">
-                    <div class="about_content ">
-                        <h2 class="title title_color">About Us 
-                            <br>Our History
-                            <br>Mission &amp; Vision
-                        </h2>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-                        <a href="#" class="button_hover theme_btn_two">Request Custom Price</a>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/about_bg.jpg" alt="img">
+                <div class="jumbotron col-md-5">
+                    <h2 id="mediasectionparallax">Section heading</h2>
+                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
+                        tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                    <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
                 </div>
             </div>
         </div>
     </section>
-    <div data-frmdb-fragment="_footer.html"></div>
-    <frmdb-fe></frmdb-fe>
+
+
+    <section class="container py-5 my-5">
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/themes/section1.jpg" alt="...">
+            </div>
+            <div class="col text-center d-flex flex-column justify-content-center">
+                <div class="jumbotron">
+                    <h2>Section Heading</h2>
+                    <p>Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
+                        convallis turpis auctor et. Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula.</p>
+                    <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg3.jpg')">
+        <div class="section_title text-center">
+            <h2 id="themeiconcards">Cards with Icons</h2>
+            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
+        </div>
+        <div class="container">
+            <div class="card-deck frmdb-cards-wrap-3">
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
+                    </h4>
+                    <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
+                </div>
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
+                    </h4>
+                    <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
+                </div>
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
+                    </h4>
+                    <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
+                        eu nulla.</p>
+                </div>
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
+                    </h4>
+                    <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
+                </div>
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
+                    </h4>
+                    <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
+                    </p>
+                </div>
+                <div class="card frmdb-t-card-icon">
+                    <h4>
+                        <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
+                    </h4>
+                    <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
+                        tempus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="container py-5 my-5">
+        <div class="row">
+            <div class="col text-center d-flex flex-column justify-content-center">
+                <div class="jumbotron">
+                    <h2>Section Heading</h2>
+                    <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
+                        fringilla ligula finibus.</p>
+                    <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
+                </div>
+            </div>
+            <div class="col">
+                <img class="img-fluid" src="/formuladb-env/static/frmdb-apps/themes/section2.jpg" alt="...">
+            </div>
+        </div>
+    </section>
+
+    <div data-frmdb-fragment="_footer.html" src="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-</bodyhtml>
+
+</body>
+
+</html>
+
+</html>
