align Hotel_Booking with themes

--- a/formuladb-env/frmdb-apps/Hotel_Booking/_head.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/_head.html
@@ -5,6 +5,6 @@
 <title>King Hotel</title>
 <link rel="stylesheet" href="/formuladb-env/icons/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="./formuladb-look.css">
-<link id="frmdb-icons-css" rel="stylesheet" type="text/css" href="/formuladb/fdb-i.css" />
+<link id="frmdb-icons-css" rel="stylesheet" type="text/css" href="/formuladb/fdb-i.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 </head>
