--- a/formuladb-env/frmdb-apps/Hotel_Booking/_nav.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/_nav.html
@@ -1,8 +1,8 @@
-<div class="frmdb-t-main-nav container bg-white fixed-top shadow" data-frmdb-fragment="_nav.html">
-<nav class="navbar navbar-expand-lg navbar-light">
+<div class="frmdb-t-main-nav" data-frmdb-fragment="_nav.html">
+<nav class="navbar">
     <a class="navbar-brand" href="index.html">
         <i class="fas fa-crown" style="color: var(--primary)"></i>
-        <strong style="font-weight: 900">KING HOTEL</strong>
+        <strong style="font-weight: 900; display: inline-block">KING HOTEL</strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
