--- a/formuladb-env/frmdb-apps/Hotel_Booking/index.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>King Hotel</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Comfort -->
-    <!-- <link rel="stylesheet" id="frmdb-look-css" href="_css/lux-ffc208-353b41.css"> -->
-    <!-- Grand Frames -->
-    <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
 </head>
-
-<body data-frmdb-theme="Clean">
+<body data-frmdb-theme="Clean" class="frmdb-editor-normal">
     <div class="frmdb-t-main-nav">
-        <nav data-frmdb-fragment="_nav.html" src="_nav.html"></nav>
+        <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg1.jpg')">
+    <header class="frmdb-t-cover" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Hotel_Booking/resort-906102_1920.jpg&quot;);">
         <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg2.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of website</h1>
-                <p>Lead paragraph providing a short introduction to you website or app,
-                    <br>it would be good to keep it under two lines of text
+                <h1 class="display-4">Relax And Enjoy</h1>
+                <p>If you are looking for a relaxation and luxury, our hotel has everything you are looking for.
+                    <br>And our prices will be a nice surprise
+                    <br>
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </div>
         <div class="frmdb-t-aside">
-            <form data-frmdb-fragment="_form.html" src="_form.html"></form>
+            <div data-frmdb-fragment="_form.html"></div>
         </div>
     </header>
-
     <section class="container py-5">
         <div class="text-center mb-5">
-            <h2 id="thememediacards">Cards with Images</h2>
+            <h2 id="thememediacards">Hotel Accomodation</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/static/frmdb-apps/themes/card1.jpg" alt="" />
+                    <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room4.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -49,15 +39,17 @@
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/static/frmdb-apps/themes/card2.jpg" alt="">
+                    <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room3.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
@@ -65,15 +57,17 @@
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/static/frmdb-apps/themes/card3.jpg" alt="">
+                    <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/room1.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
@@ -81,15 +75,17 @@
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/static/frmdb-apps/themes/card4.jpg" alt="">
+                    <img src="/formuladb-env/static/frmdb-apps/Hotel_Booking/facilites_bg.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
@@ -97,16 +93,16 @@
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
         </div>
     </section>
-
-
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg-right.jpg')">
         <div class="container">
             <div class="row">
@@ -119,8 +115,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -136,9 +130,6 @@
             </div>
         </div>
     </section>
-
-
-
     <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg3.jpg')">
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
@@ -188,8 +179,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
@@ -205,12 +194,9 @@
             </div>
         </div>
     </section>
-
-    <div data-frmdb-fragment="_footer.html" src="_footer.html"></div>
+    <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-
+    <frmdb-fe></frmdb-fe>
 </body>
-
 </html>
-
 </html>
