fix Chrome connection limit reached for changes-feed

--- a/formuladb-env/frmdb-apps/Hotel_Booking/_nav.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/_nav.html
@@ -1,7 +1,7 @@
 <div class="frmdb-t-main-nav" data-frmdb-fragment="_nav.html">
 <nav class="navbar">
     <a class="navbar-brand" href="index.html">
-        <i class="fas fa-crown" style="color: var(--primary)"></i>
+        <frmdb-icon class="text-primary" name="fontawesome-solid-images-album-landscape-photo-picture"></frmdb-icon>
         <strong style="font-weight: 900; display: inline-block">KING HOTEL</strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
