--- a/formuladb-env/frmdb-apps/Hotel_Booking/index.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>King Hotel</title>
 </head>
-<body data-frmdb-theme="Clean" class="frmdb-editor-normal">
+<body data-frmdb-theme="Clean" class="frmdb-editor-preview">
     <div class="frmdb-t-main-nav">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
@@ -103,12 +103,12 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg-right.jpg')">
+    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/static/frmdb-apps/Hotel_Booking/palm-966994_1920.jpg&quot;);">
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5">
-                    <h2 id="mediasectionparallax">Section heading</h2>
-                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
+                    <h2 id="mediasectionparallax" class="text-light">Section heading</h2>
+                    <p class="text-light">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
                         tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
                 </div>
@@ -196,6 +196,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
