--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -238,8 +238,8 @@
     <iframe src="/formuladb/editor-new-app-modal.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
     <script src="/formuladb/frmdb-fe.js"></script>
-    <script src="/formuladb/frmdb-editor.js"></script>
-    <script src="/formuladb/frmdb-data-grid.js"></script>
+    <!-- <script src="/formuladb/frmdb-editor.js"></script> -->
+    <!-- <script src="/formuladb/frmdb-data-grid.js"></script> -->
 
 </body>
 
