icon-editor working for free and premium icons

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -21,7 +21,7 @@
                 </button>
 
                 <button class="btn btn-light" title="Redo change" id="redo-btn" data-frmdb-action="redo" data-vvveb-shortcut="ctrl+shift+z">
-                    <i class="frmdb-i-undo fa-flip-horizontal"></i>
+                    <i class="frmdb-i-undo frmdb-i-flip-horizontal"></i>
                 </button>
             </div>
 
