fixes for i18n, icons and components

--- a/git/formuladb-env/frmdb-apps/themes/components-nav.html
+++ b/git/formuladb-env/frmdb-apps/themes/components-nav.html
@@ -10,14 +10,17 @@
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#buttons" >Buttons</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#typography" >Typography</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#tables" >Tables</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#forms" >Forms</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#navs" >Navs</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#indicators" >Indicators</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#progress" >Progress</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#containers" >Containers</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#dialogs" >Dialogs</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/icons.html" >Icons</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Form Inputs</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/forms.html#forms" >Forms</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Components</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#tab-panel" >Tab Panel</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#tab-panel" >Nav Panel Vertical</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#carousel" >Carousel</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#pagination" >Pagination</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#infinite-scroll" >Infinite Scroll</a></li>
