--- a/git/formuladb-env/frmdb-apps/themes/components.html
+++ b/git/formuladb-env/frmdb-apps/themes/components.html
@@ -12,6 +12,18 @@
 
 <body>
 
+    <section id="tab-panel">
+        <h2>Tab Panel</h2>
+        Comming soon
+    </section>
+
+    
+    <section id="nav-panel-vertical">
+        <h2>Nav Panel Vertical</h2>
+        Comming soon
+    </section>
+
+
     <section id="carousel">
         <h2>Carousel</h2>
         Comming soon
