removed ElementTree, using only highlight-box, devtools should be used instead of element tree

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -157,9 +157,9 @@
             </li>
         </ul>
 
-        <div class="left-panel-tree border-top overflow-auto">
+        <!-- <div class="left-panel-tree border-top overflow-auto">
             <frmdb-element-tree></frmdb-element-tree>
-        </div>
+        </div> -->
 
         <frmdb-element-editor class="d-flex flex-column"></frmdb-element-editor>
     </div>
