--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2601,6 +2601,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-cogs-settings"></i>
+            </span>
+            <br>
+            <span class='label'>cogs-settings</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-copy"></i>
             </span>
             <br>
@@ -3361,6 +3370,15 @@
             </span>
             <br>
             <span class='label'>paperclip</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-pen-fancy"></i>
+            </span>
+            <br>
+            <span class='label'>pen-fancy</span>
         </div>
 
 
