made highlight more user friendly

--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -3204,6 +3204,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-grand-parent-element"></i>
+            </span>
+            <br>
+            <span class='label'>grand-parent-element</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-hand-point-left"></i>
             </span>
             <br>
@@ -3375,6 +3384,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-parent-element"></i>
+            </span>
+            <br>
+            <span class='label'>parent-element</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-pen-fancy"></i>
             </span>
             <br>
@@ -3523,6 +3541,15 @@
             </span>
             <br>
             <span class='label'>searchengin</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-sibling-element"></i>
+            </span>
+            <br>
+            <span class='label'>sibling-element</span>
         </div>
 
 
