--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2646,6 +2646,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-cursor-select"></i>
+            </span>
+            <br>
+            <span class='label'>cursor-select</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-cut"></i>
             </span>
             <br>
