--- a/git/formuladb-env/frmdb-apps/themes/components-nav.html
+++ b/git/formuladb-env/frmdb-apps/themes/components-nav.html
@@ -14,8 +14,13 @@
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#indicators" >Indicators</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#progress" >Progress</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#containers" >Containers</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#dialogs" >Dialogs</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/icons.html" >Icons</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Overlays</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/overlays.html#modals" >Modals</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/overlays.html#popovers" >Popovers</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/overlays.html#tooltips" >Tooltips</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/overlays.html#toasts" >Toasts</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/overlays.html#highlight" >Highlight</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Form Inputs</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/forms.html#forms" >Forms</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Components</a></li>
