--- a/git/formuladb-env/frmdb-apps/themes/_scripts.html
+++ b/git/formuladb-env/frmdb-apps/themes/_scripts.html
@@ -1,6 +1,7 @@
 <div data-frmdb-fragment="_scripts.html" data-frmdb-highlight-ignore>
     <script src="/formuladb/frmdb-fe.js"></script>
 
+    <link rel="stylesheet" href="/formuladb/icons/frmdb-icons.css" />
     <link rel="stylesheet" href="/formuladb-env/plugins/animate.min.css">
     <link rel="stylesheet" href="/formuladb-env/plugins/hover.css">
 
